syntax = "proto3";

package posts;

option go_package = "posts.v1";

import "google/protobuf/empty.proto";

service Posts {
  rpc CreatePost(PostRequest) returns (PostResponse);

  rpc GetPostByID(PostIDRequest) returns (PostResponse);

  rpc GetPostsByUser(UserRequest) returns (PostsResponse);

  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty);

  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty);
}

message PostRequest {
  string userID = 1;
  string text = 2;
}

message PostResponse {
  string postID = 1;
  string authorID = 2;
  int64 date = 3;
  string text = 4;
}

message PostIDRequest {
  string postID = 1;
}

message UserRequest {
  string userID = 1;
}

message UpdatePostRequest {
  string postID = 1;
  string userID = 2;
  string text = 3;
}

message PostsResponse {
  repeated PostResponse posts = 1;
}

message DeletePostRequest {
  string userID = 1;
  string postID = 2;
}
